--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,463 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="images/logo.png"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
-    <h1>Hello Mate Academy</h1>
+    <article
+      id="#"
+      class="body__section body__section--grid header"
+    >
+      <div class="topbar">
+        <a
+          href="#menu"
+          class="icon icon--menu"
+        ></a>
+        <div class="topbar__icon">
+          <a
+            href="#"
+            class="icon icon--logo"
+          ></a>
+        </div>
+      </div>
+
+      <img
+        class="header__image header__image--on-phone"
+        src="images/header/natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv.png"
+        alt="header img"
+      />
+
+      <div class="body__section__content header__content">
+        <div class="header__content__container">
+          <h1>ХУДОЖНІЙ МУЗЕЙ</h1>
+          <a
+            href="#events"
+            class="header__content__button"
+          >
+            <div class="header__content__button__text">квитки</div>
+            <div class="icon icon--arrow icon--no-hover"></div>
+          </a>
+        </div>
+
+        <a
+          href="#events"
+          class="header__content__vert_link"
+        >
+          <p>ПОДІЇ</p>
+          <div class="header__content__vert_link__line"></div>
+        </a>
+      </div>
+
+      <img
+        class="header__image header__image--on-tablet"
+        src="images/header/natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv.png"
+        alt="header img"
+      />
+    </article>
+
+    <aside
+      id="menu"
+      class="body__section body__section--grid body__section__content menu"
+    >
+      <div class="menu__nav">
+        <div class="menu__nav__container">
+          <a
+            href="#"
+            class="icon icon--close"
+          ></a>
+
+          <div class="menu__nav__links">
+            <a
+              href="#gallery-m"
+              class="menu__nav__links__link a--m"
+            >
+              Галерея
+            </a>
+
+            <a
+              href="#gallery-d"
+              class="menu__nav__links__link a--d"
+            >
+              Галерея
+            </a>
+
+            <a
+              href="#"
+              class="menu__nav__links__link"
+            >
+              Про Нас
+            </a>
+            <a
+              href="#events"
+              class="menu__nav__links__link"
+            >
+              Виставки та події
+            </a>
+            <a
+              href="#footer"
+              class="menu__nav__links__link"
+            >
+              Контакти
+            </a>
+          </div>
+        </div>
+
+        <div class="menu__devider menu__devider--on-tablet"></div>
+      </div>
+
+      <div class="menu__devider menu__devider--on-desktop"></div>
+
+      <div class="menu__timetable">
+        <div>
+          Графік роботи
+          <br />
+          <br />
+          <span class="b">12:00 — 20:00</span>
+          середа
+          <br />
+          <span class="b">12:00 — 20:00</span>
+          четвер
+          <br />
+          <span class="b">12:00 — 20:00</span>
+          п’ятниця
+          <br />
+          <span class="b">11:00 — 19:00</span>
+          субота
+          <br />
+          <span class="b">11:00 — 19:00</span>
+          неділя
+          <br />
+          <br />
+        </div>
+
+        <div>
+          Вихідні: понеділок, вівторок
+          <br />
+          Каса припиняє роботу за 1 годину до закриття музею
+        </div>
+      </div>
+    </aside>
+
+    <div class="dimming"></div>
+
+    <article
+      id="events"
+      class="body__section body__section__content events"
+    >
+      <h2>Актуальні події</h2>
+
+      <div class="events__group">
+        <div class="events__group__event">
+          <img
+            src="images/events/go-and-back.png"
+            alt="go and back"
+            class="events__group__event__image"
+          />
+
+          <div class="events__group__event__text">
+            <div class="events__group__event__text__subtitle">
+              <p>ВИСТАВКА</p>
+              <span class="b">26.08-29.11.2019</span>
+            </div>
+            <div class="events__group__event__text__title">
+              Йду і повертаюсь
+            </div>
+            <div class="events__group__event__text__description">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </div>
+          </div>
+        </div>
+
+        <div class="events__group__event">
+          <img
+            src="images/events/memoirs-and-dreem.png"
+            alt="memoirs-and-dreem"
+            class="events__group__event__image"
+          />
+
+          <div class="events__group__event__text">
+            <div class="events__group__event__text__subtitle">
+              <p>ВИСТАВКА</p>
+              <span class="b">26.08-29.11.2019</span>
+            </div>
+            <div class="events__group__event__text__title">
+              І спогади і мрії
+            </div>
+            <div class="events__group__event__text__description">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </div>
+          </div>
+        </div>
+      </div>
+    </article>
+
+    <article
+      id="banner"
+      class="body__section body__section__content banner"
+    >
+      <div class="banner__plate">
+        <p class="banner__plate__subtitle">
+          ЛЕКЦІЯ
+          <span class="b">26/08/2019 - 11:00</span>
+        </p>
+        <h3 class="banner__plate__title">Від класицизму до романтизму</h3>
+      </div>
+    </article>
+
+    <article
+      id="gallery-m"
+      class="carousel__wrapper"
+    >
+      <h2>Галерея</h2>
+
+      <ul class="carousel">
+        <li class="carousel__item">
+          <img
+            class="carousel__item__image"
+            alt="woman"
+            src="images/gallery/woman.png"
+          />
+        </li>
+        <li class="carousel__item">
+          <img
+            class="carousel__item__image"
+            alt="goose"
+            src="images/gallery/goose.png"
+          />
+        </li>
+        <li class="carousel__item">
+          <img
+            class="carousel__item__image"
+            alt="snow-village"
+            src="images/gallery/snow-village.png"
+          />
+        </li>
+        <li class="carousel__item">
+          <img
+            class="carousel__item__image"
+            alt="girl"
+            src="images/gallery/girl.png"
+          />
+        </li>
+        <li class="carousel__item">
+          <img
+            class="carousel__item__image"
+            alt="sunset"
+            src="images/gallery/sunset.png"
+          />
+        </li>
+      </ul>
+
+      <div class="carousel__bullets">
+        <div
+          class="carousel__bullets__bullet carousel__bullets__bullet--active"
+        ></div>
+        <div class="carousel__bullets__bullet"></div>
+        <div class="carousel__bullets__bullet"></div>
+        <div class="carousel__bullets__bullet"></div>
+      </div>
+    </article>
+
+    <article
+      id="gallery-d"
+      class="body__section body__section__content gallery"
+    >
+      <h2>Галерея</h2>
+
+      <div class="gallery__content">
+        <img
+          src="images/gallery/woman.png"
+          alt="woman"
+          class="gallery__content__image gallery__content__image--1"
+        />
+        <img
+          src="images/gallery/snow-village.png"
+          alt="snow-village"
+          class="gallery__content__image gallery__content__image--2"
+        />
+        <img
+          src="images/gallery/girl.png"
+          alt="girl"
+          class="gallery__content__image gallery__content__image--3"
+        />
+        <img
+          src="images/gallery/sunset.png"
+          alt="sunset"
+          class="gallery__content__image gallery__content__image--4"
+        />
+      </div>
+    </article>
+
+    <article
+      id="subscription"
+      class="body__section subscription"
+    >
+      <div class="subscription__content">
+        <h2 class="subscription__content__title">Підписка</h2>
+
+        <p>Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+        <form
+          class="subscription__content__form"
+          onsubmit="this.reset(); return false;"
+        >
+          <input
+            class="subscription__content__form__input"
+            type="email"
+            name="email"
+            placeholder="E-mail"
+            required
+          />
+
+          <button
+            class="subscription__content__form__button icon icon--arrow icon--arrow--orange"
+          ></button>
+        </form>
+      </div>
+
+      <div class="subscription__dimming"></div>
+    </article>
+
+    <article
+      id="footer"
+      class="body__section body__section--grid body__section__content footer"
+    >
+      <div class="footer__icons">
+        <div class="icon icon--logo"></div>
+        <div class="footer__icons__socials">
+          <a
+            href="https://www.facebook.com"
+            target="_blank"
+            class="icon icon--fb"
+          ></a>
+          <a
+            href="https://www.instagram.com"
+            target="_blank"
+            class="icon icon--ig"
+          ></a>
+        </div>
+      </div>
+
+      <div class="footer__timetable">
+        Графік роботи
+        <br />
+        <br />
+
+        <span class="b">12:00 — 20:00</span>
+        середа
+        <br />
+        <span class="b">12:00 — 20:00</span>
+        четвер
+        <br />
+        <span class="b">12:00 — 20:00</span>
+        п’ятниця
+        <br />
+        <span class="b">11:00 — 19:00</span>
+        субота
+        <br />
+        <span class="b">11:00 — 19:00</span>
+        неділя
+        <br />
+        <br />
+
+        <span class="b">Вихідні</span>
+        понеділок, вівторок
+        <br />
+        Каса припиняє роботу за 1 годину до закриття музею
+      </div>
+
+      <div class="footer__contacts">
+        Контакти:
+        <br />
+        <br />
+
+        <a
+          href="https://maps.app.goo.gl/GxcRxn5N62H9ztAt5"
+          target="_blank"
+        >
+          вул. М. Грушевського, 6; Київ, 01001
+        </a>
+        <br />
+        <a href="tel:+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a>
+        <br />
+        <a href="tel:+38 (044) 278-74-54">факс +38 (044) 278-74-54</a>
+        <br />
+        <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+      </div>
+
+      <div class="footer__devider">
+        <a
+          href="#"
+          class="icon icon--up footer__up"
+        ></a>
+      </div>
+
+      <div class="footer__links">
+        <div class="footer__links__group">
+          <a
+            href="#gallery-m"
+            class="a--m"
+          >
+            Галерея
+          </a>
+          <a
+            href="#gallery-d"
+            class="a--d"
+          >
+            Галерея
+          </a>
+          <a href="#">Про Нас</a>
+          <a href="#events">Виставки та події</a>
+          <a href="#footer">Контакти</a>
+        </div>
+      </div>
+
+      <div class="footer__bottom_bar">
+        <p>Copyright © 2019. All Rights Reserved.</p>
+        <p>Designed by Zhyriada Marina</p>
+      </div>
+    </article>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
