--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,368 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="ua"
+  class="page dimmed"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>ХУДОЖНІЙ МУЗЕЙ</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/src/images/NAMU_logo.svg"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__img">
+        <a
+          href="#"
+          class="logo logo__menu"
+        >
+          <img
+            src="./images/NAMU_logo.svg"
+            alt="NAMU logo"
+            class="logo__img"
+          />
+        </a>
+      </div>
+      <div class="container">
+        <div class="header__top">
+          <a
+            href="#menu"
+            class="header__menu"
+          >
+            <img
+              src="./images/baseline-menu-24px.svg"
+              alt="Menu"
+            />
+          </a>
+        </div>
+
+        <div class="header__info">
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <button class="header__button">КВИТКИ</button>
+          <a
+            href="#exhibition"
+            class="header__action"
+          >
+            ПОДІЇ
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <aside
+      class="slider-menu menu active"
+      id="menu"
+    >
+      <div class="menu__background">
+        <div class="container">
+          <div class="slider-menu__content">
+            <div class="slider-menu__top">
+              <div class="slider-menu__top-content">
+                <a
+                  href="#"
+                  class="icon icon__menu"
+                ></a>
+                <nav class="slider-menu__nav">
+                  <ul class="slider-menu__list">
+                    <li class="slider-menu__item">
+                      <a
+                        href="#gallery"
+                        class="slider-menu__link"
+                      >
+                        Галерея
+                      </a>
+                    </li>
+                    <li class="slider-menu__item">
+                      <a
+                        href="#exhibition"
+                        class="slider-menu__link"
+                      >
+                        Виставки та
+                        <br />
+                        події
+                      </a>
+                    </li>
+                  </ul>
+                  <ul class="slider-menu__list">
+                    <li class="slider-menu__item">
+                      <a
+                        href="#about-us"
+                        class="slider-menu__link"
+                      >
+                        Про Нас
+                      </a>
+                    </li>
+                    <li class="slider-menu__item">
+                      <a
+                        href="#contact"
+                        class="slider-menu__link"
+                      >
+                        Контакти
+                      </a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+
+            <div class="slider-menu__bottom">
+              <p class="slider-menu__bottom--title">Графік роботи</p>
+              <div class="slider-menu__bottom--schedule">
+                <ul class="slider-menu__bottom--list">
+                  <li class="slider-menu__bottom--item">
+                    <strong>12:00 — 20:00</strong>
+                    середа
+                  </li>
+                  <li class="slider-menu__bottom--item">
+                    <strong>12:00 — 20:00</strong>
+                    четвер
+                  </li>
+                  <li class="slider-menu__bottom--item">
+                    <strong>12:00 — 20:00</strong>
+                    п’ятниця
+                  </li>
+                  <li class="slider-menu__bottom--item">
+                    <strong>11:00 — 19:00</strong>
+                    субота
+                  </li>
+                  <li class="slider-menu__bottom--item">
+                    <strong>11:00 — 19:00</strong>
+                    неділя
+                  </li>
+                </ul>
+                <p class="slider-menu__bottom--note">
+                  <strong>Вихідні:</strong>
+                  понеділок, вівторок
+                  <br />
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main>
+      <section
+        class="events"
+        id="exhibition"
+      >
+        <div class="container">
+          <h2 class="events__title">Актуальні події</h2>
+          <div class="event event__block">
+            <img
+              src="./images/actual/landscape.png"
+              alt="Landscape"
+              class="event__img"
+            />
+            <div class="event__info">
+              <div class="event__actual">
+                <p class="event__subtitle">ВИСТАВКА</p>
+                <p class="event__date">26.08-29.11.2019</p>
+              </div>
+              <h3 class="event__title">Йду і повертаюсь</h3>
+              <p class="event__description">
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво другої половини
+                1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+          <div class="event event__block">
+            <img
+              src="./images/actual/girl-and-peacock.png"
+              alt="Girl and Peacock"
+              class="event__img"
+            />
+            <div class="event__info">
+              <div class="event__actual">
+                <p class="event__subtitle">ВИСТАВКА</p>
+                <p class="event__date">26.08-29.11.2019</p>
+              </div>
+              <h3 class="event__title">І спогади і мрії</h3>
+              <p class="event__description">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+
+          <div class="event__block event__block--lecture">
+            <div class="event__background">
+              <img
+                src="./images/backgraund-img.png"
+                alt="Picture"
+                class="event__bg-img"
+              />
+            </div>
+            <div class="event__info event__info--lecture">
+              <div class="event__actual event__actual--lecture">
+                <p class="event__subtitle">ЛЕКЦІЯ</p>
+                <p class="event__date">26/08/2019 - 11:00</p>
+              </div>
+              <h3 class="event__title event__title--lecture">
+                Від класицизму до
+                <br />
+                романтизму
+              </h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="gallery"
+        id="gallery"
+      >
+        <div class="container">
+          <h2 class="gallery__title">Галерея</h2>
+          <div class="gallery__wide">
+            <img
+              src="./images/gallery/ukranian-woman.png"
+              alt="Ukranian woman"
+              class="gallery__picture gallery__picture--square"
+            />
+            <img
+              src="./images/gallery/ukrainian-village.png"
+              alt="Ukrainian village"
+              class="gallery__picture gallery__picture--wide"
+            />
+            <img
+              src="./images/gallery/park.png"
+              alt="Park"
+              class="gallery__picture gallery__picture--wide"
+            />
+            <img
+              src="./images/gallery/sunset-sea.png"
+              alt="Sunset sea"
+              class="gallery__picture gallery__picture--square"
+            />
+          </div>
+
+          <div class="gallery__slider slider">
+            <input
+              type="radio"
+              name="slick"
+              id="slide-1"
+              checked
+            />
+            <input
+              type="radio"
+              name="slick"
+              id="slide-2"
+            />
+            <input
+              type="radio"
+              name="slick"
+              id="slide-3"
+            />
+            <input
+              type="radio"
+              name="slick"
+              id="slide-4"
+            />
+
+            <div class="slider__track">
+              <div class="slider__item">
+                <img
+                  src="./images/gallery/ukranian-woman.png"
+                  alt="Ukranian-woman"
+                  class="slider__img"
+                />
+              </div>
+              <div class="slider__item">
+                <img
+                  src="./images/gallery/geese.png"
+                  alt="Geese"
+                  class="slider__img"
+                />
+              </div>
+              <div class="slider__item">
+                <img
+                  src="./images/gallery/sunset-sea.png"
+                  alt="Sunset-sea"
+                  class="slider__img"
+                />
+              </div>
+              <div class="slider__item">
+                <img
+                  src="./images/gallery/ukrainian-village.png"
+                  alt="Ukrainian-village"
+                  class="slider__img"
+                />
+              </div>
+              <div class="slider__item">
+                <img
+                  src="./images/gallery/ukranian-woman.png"
+                  alt="Ukranian-woman"
+                  class="slider__img"
+                />
+              </div>
+              <div class="slider__item">
+                <img
+                  src="./images/gallery/geese.png"
+                  alt="Geese"
+                  class="slider__img"
+                />
+              </div>
+              <div class="slider__item">
+                <img
+                  src="./images/gallery/sunset-sea.png"
+                  alt="Sunset-sea"
+                  class="slider__img"
+                />
+              </div>
+              <div class="slider__item">
+                <img
+                  src="./images/gallery/ukrainian-village.png"
+                  alt="Ukrainian-village"
+                  class="slider__img"
+                />
+              </div>
+            </div>
+
+            <div class="slick-navigation">
+              <label for="slide-1"></label>
+              <label for="slide-2"></label>
+              <label for="slide-3"></label>
+              <label for="slide-4"></label>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="about-us">
+        <div class="container"></div>
+      </section>
+    </main>
+
+    <footer></footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
