--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
     />
   </head>
   <body>
+    <a id="top"></a>
     <header class="header">
       <div class="header__img">
         <a
@@ -236,6 +237,8 @@
         </div>
       </section>
 
+      <a id="show-button"></a>
+
       <section
         class="gallery"
         id="gallery"
@@ -269,23 +272,27 @@
             <input
               type="radio"
               name="slick"
-              id="slide-1"
+              class="slick-1"
+              id="slick-1"
               checked
             />
             <input
               type="radio"
               name="slick"
-              id="slide-2"
+              class="slick-2"
+              id="slick-2"
             />
             <input
               type="radio"
               name="slick"
-              id="slide-3"
+              class="slick-3"
+              id="slick-3"
             />
             <input
               type="radio"
               name="slick"
-              id="slide-4"
+              class="slick-4"
+              id="slick-4"
             />
 
             <div class="slider__track">
@@ -348,21 +355,229 @@
             </div>
 
             <div class="slick-navigation">
-              <label for="slide-1"></label>
-              <label for="slide-2"></label>
-              <label for="slide-3"></label>
-              <label for="slide-4"></label>
+              <label for="slick-1"></label>
+              <label for="slick-2"></label>
+              <label for="slick-3"></label>
+              <label for="slick-4"></label>
             </div>
           </div>
         </div>
       </section>
 
-      <section id="about-us">
-        <div class="container"></div>
+      <section
+        class="subscribe"
+        id="about-us"
+      >
+        <div class="container">
+          <div class="subscribe__block">
+            <h3 class="subscribe__title">Підписка</h3>
+            <p class="subscribe__description">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <form
+              action="#"
+              class="subscribe__form"
+            >
+              <input
+                type="email"
+                placeholder="Email"
+                name="email"
+                id="email"
+                required
+                class="subscribe__input"
+              />
+              <button
+                class="subscribe__button"
+                type="submit"
+              ></button>
+            </form>
+          </div>
+        </div>
       </section>
     </main>
 
-    <footer></footer>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__icon">
+            <a
+              href="#"
+              class="logo logo__menu--footer"
+            >
+              <img
+                src="./images/NAMU_logo.svg"
+                alt="NAMU logo"
+                class="logo__img"
+              />
+            </a>
+            <div class="logo__media">
+              <a
+                href="https://www.facebook.com/"
+                target="_blank"
+                class="logo__social"
+              >
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="black"
+                  class="logo__icon"
+                >
+                  <path
+                    d="M8.80699 4.64899C8.80699 5.2538 8.80699 7.9533 8.80699 7.9533H6.38992V11.9938H8.80699V24.0009H13.7722V11.9942H17.104C17.104 11.9942 17.4161 10.0568 17.5673 7.93841C17.1337 7.93841 13.7909 7.93841 13.7909 7.93841C13.7909 7.93841 13.7909 5.58776 13.7909 5.17573C13.7909 4.76282 14.3323 4.2074 14.8674 4.2074C15.4014 4.2074 16.5286 4.2074 17.5726 4.2074C17.5726 3.65727 17.5726 1.75647 17.5726 0.000976577C16.1789 0.000976577 14.5933 0.000976577 13.8944 0.000976577C8.68426 0.000697581 8.80699 4.04524 8.80699 4.64899Z"
+                  />
+                </svg>
+              </a>
+
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                class="logo__social"
+              >
+                <svg
+                  width="25"
+                  height="24"
+                  viewBox="0 0 25 24"
+                  fill="black"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="logo__icon"
+                >
+                  <path
+                    d="M17.5908 0H6.58397C3.0017 0 0.0874023 2.9143 0.0874023 6.49657V17.5036C0.0874023 21.0857 3.0017 24 6.58397 24H17.591C21.1731 24 24.0874 21.0857 24.0874 17.5036V6.49657C24.0874 2.9143 21.1731 0 17.5908 0V0ZM12.0874 18.5623C8.46886 18.5623 5.52507 15.6185 5.52507 12C5.52507 8.38145 8.46886 5.43767 12.0874 5.43767C15.7059 5.43767 18.6497 8.38145 18.6497 12C18.6497 15.6185 15.7059 18.5623 12.0874 18.5623ZM18.8066 6.98528C17.7373 6.98528 16.8675 6.11553 16.8675 5.04619C16.8675 3.97686 17.7373 3.10693 18.8066 3.10693C19.8759 3.10693 20.7459 3.97686 20.7459 5.04619C20.7459 6.11553 19.8759 6.98528 18.8066 6.98528Z"
+                  />
+                  <path
+                    d="M12.0874 6.84473C9.24487 6.84473 6.93207 9.15734 6.93207 12.0001C6.93207 14.8426 9.24487 17.1554 12.0874 17.1554C14.9301 17.1554 17.2427 14.8426 17.2427 12.0001C17.2427 9.15734 14.9301 6.84473 12.0874 6.84473Z"
+                  />
+                  <path
+                    d="M18.8066 4.51416C18.5133 4.51416 18.2745 4.75293 18.2745 5.04626C18.2745 5.3396 18.5133 5.57837 18.8066 5.57837C19.1001 5.57837 19.3389 5.33978 19.3389 5.04626C19.3389 4.75275 19.1001 4.51416 18.8066 4.51416Z"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__schedule">
+            <p class="footer__title">Графік роботи</p>
+            <ul class="footer__list">
+              <li class="footer__item">
+                <strong>12:00 — 20:00</strong>
+                середа
+              </li>
+              <li class="footer__item">
+                <strong>12:00 — 20:00</strong>
+                четвер
+              </li>
+              <li class="footer__item">
+                <strong>12:00 — 20:00</strong>
+                п’ятниця
+              </li>
+              <li class="footer__item">
+                <strong>11:00 — 19:00</strong>
+                субота
+              </li>
+              <li class="footer__item">
+                <strong>11:00 — 19:00</strong>
+                неділя
+              </li>
+            </ul>
+            <p class="footer__note">
+              <strong>Вихідні:</strong>
+              понеділок, вівторок
+              <br />
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+
+          <div
+            class="footer__contact"
+            id="contact"
+          >
+            <p class="footer__title">Контакти:</p>
+            <a
+              href="https://maps.app.goo.gl/wFPzbtpWpHXn3Hvm6"
+              class="footer__link"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+
+            <a
+              href="tel:+38 (044) 278-13-57"
+              class="footer__link"
+            >
+              тел. +38 (044) 278-13-57
+            </a>
+
+            <a
+              href="fax:+38 (044) 278-74-54"
+              class="footer__link"
+            >
+              факс +38 (044) 278-74-54"
+            </a>
+
+            <a
+              href="mailto:info@namu.kiev.ua"
+              class="footer__link"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+
+          <a
+            href="#top"
+            class="footer__button-up"
+          ></a>
+
+          <div class="footer__decoration"></div>
+
+          <ul class="footer-menu__list footer-menu__list-first">
+            <li class="footer-menu__item">
+              <a
+                href="#gallery"
+                class="footer-menu__link"
+              >
+                Галерея
+              </a>
+            </li>
+            <li class="footer-menu__item">
+              <a
+                href="#exhibition"
+                class="footer-menu__link"
+              >
+                Виставки та
+                <br />
+                події
+              </a>
+            </li>
+          </ul>
+          <ul class="footer-menu__list footer-menu__list-second">
+            <li class="footer-menu__item">
+              <a
+                href="#about-us"
+                class="footer-menu__link"
+              >
+                Про Нас
+              </a>
+            </li>
+            <li class="footer-menu__item">
+              <a
+                href="#contact"
+                class="footer-menu__link"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+
+          <div class="footer__bottom">
+            <p class="footer__bottom-text">Designed by Zhyriada Marina</p>
+            <p class="footer__bottom-text">
+              Copyright © 2019. All Rights Reserved.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
