--- a/src/index.html
+++ b/src/index.html
@@ -88,45 +88,45 @@
 
     <main class="main">
       <h2 class="main__title">Актуальні події</h2>
-      <div class="main__current-events">
-        <div class="main__current-events-item">
-          <div class="main__current-events-item-img">
+      <div class="current-events">
+        <div class="current-events-item">
+          <div class="current-events-item-img">
             <img
               src="./images/first.png"
               alt="f"
             />
           </div>
-          <div class="main__current-events-item-data">
-            <p class="main__current-events-item-data-title">ВИСТАВКА</p>
-            <p class="main__current-events-item-data-time">26.08-29.11.2019</p>
+          <div class="current-events-item-data">
+            <p class="current-events-item-data-title">ВИСТАВКА</p>
+            <p class="current-events-item-data-time">26.08-29.11.2019</p>
           </div>
-          <div class="main__current-events-item-title">
+          <div class="current-events-item-title">
             <p>Йду і повертаюсь</p>
             <div></div>
           </div>
-          <div class="main__current-events-item-text">
+          <div class="current-events-item-text">
             Національний Художній Музей України презентує унікальну частину
             колекції Градобанку - українське мистецтво другої половини 1980-1995
             років.
           </div>
         </div>
 
-        <div class="main__current-events-item">
-          <div class="main__current-events-item-img">
+        <div class="current-events-item">
+          <div class="current-events-item-img">
             <img
               src="./images/second.png"
               alt="f"
             />
           </div>
-          <div class="main__current-events-item-data">
-            <p class="main__current-events-item-data-title">ВИСТАВКА</p>
-            <p class="main__current-events-item-data-time">26.08-29.11.2019</p>
+          <div class="current-events-item-data">
+            <p class="current-events-item-data-title">ВИСТАВКА</p>
+            <p class="current-events-item-data-time">26.08-29.11.2019</p>
           </div>
-          <div class="main__current-events-item-title">
+          <div class="current-events-item-title">
             <p>І спогади і мрії</p>
             <div></div>
           </div>
-          <div class="main__current-events-item-text">
+          <div class="current-events-item-text">
             Національний художній музей України до 100 річчя від дня народження
             видатної української художниці Тетяни Яблонської відкриває
             ретроспективну ювілейну виставку «І спогади і мрії».
@@ -134,25 +134,23 @@
         </div>
       </div>
 
-      <div class="main__lection">
+      <div class="lection">
         <img
           src="./images/lection.png"
           alt="lection"
-          class="main__lection-img"
+          class="lection-img"
         />
-        <div class="main__lection-info">
-          <div class="main__lection-info-data">
+        <div class="lection-info">
+          <div class="lection-info-data">
             <p>ЛЕКЦІЯ</p>
             <p>26/08/2019 - 11:00</p>
           </div>
-          <div class="main__lection-info-title">
-            Від класицизму до романтизму
-          </div>
+          <div class="lection-info-title">Від класицизму до романтизму</div>
         </div>
       </div>
 
-      <div class="main__galery">
-        <div class="main__galery-title">Галерея</div>
+      <div class="galery">
+        <div class="galery-title">Галерея</div>
         <div class="slider-wrapper">
           <div class="slider">
             <div class="slides">
@@ -188,6 +186,17 @@
               <span class="dot"></span>
             </div>
           </div>
+        </div>
+      </div>
+
+      <div class="subscription">
+        <h4 class="subscription__title">Підписка</h4>
+        <p class="subscription__subtitle">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <div class="subscription__tickets">
+          <div class="subscription__tickets-title">E-mail</div>
+          <div class="subscription__tickets-arrow"></div>
         </div>
       </div>
     </main>
